Line breaks and text wrapping all correct: https://github.com/charmeproject/charme_plugin/issues/76 Other minor fixes.

--- a/CHARMe_plugin/src/plugin/css/charme.css
+++ b/CHARMe_plugin/src/plugin/css/charme.css
@@ -408,7 +408,7 @@ textarea::-webkit-input-placeholder {
     text-align: center;
 }
 .confirm-box-message, .anno-comments {
-    white-space: pre;
+    white-space: pre-wrap;
 }
 
 .shift-anno-buttons-holder {
